--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 			<version>${spring.boot.admin.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.79</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
